force-app/main/default/objects/Surgery__c/Surgery__c.object-meta.xml
<CustomObject>
    <label>Surgery</label>
    <nameField>
        <displayFormat>s-{0000}</displayFormat>
        <label>Surgery</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgery</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>