force-app/main/default/objects/Surgery__c/fields/Clinical_Encounter__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Encounter</label>
    <referenceTo>ClinicalEncounter</referenceTo>
    <relationshipLabel>Surgery</relationshipLabel>
    <relationshipName>Surgery</relationshipName>
    <type>Lookup</type>
</CustomField>