force-app/main/default/objects/Surgery__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient associated</description>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surgery</relationshipLabel>
    <relationshipName>Surgery</relationshipName>
    <type>Lookup</type>
</CustomField>