force-app/main/default/objects/Surgery__c/fields/Post_op_Notes__c.field-meta.xml
<CustomField>
    <fullName>Post_op_Notes__c</fullName>
    <label>Post-op Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>