force-app/main/default/objects/Surgery__c/fields/Pre_op_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Pre_op_Checklist__c</fullName>
    <label>Pre-op Checklist</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>