force-app/main/default/objects/Surgery__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Surgery</relationshipName>
    <type>Lookup</type>
</CustomField>