force-app/main/default/objects/Surgery__c/fields/Surgery_Type__c.field-meta.xml
<CustomField>
    <fullName>Surgery_Type__c</fullName>
    <label>Surgery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ortho</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>ENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>